--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
-    "vue": "^2.5.11"
+    "vue": "^2.5.11",
+    "vue-resource": "^1.5.3",
+    "vue-router": "^4.0.12"
   },
   "browserslist": [
     "> 1%",
